@@ -1,3 +1,10 @@
+2024-02-03  Bart Schaefer  <schaefer@zsh.org>
+
+	* 52513: Doc/Zsh/mod_private.yo, Src/Modules/param_private.c,
+	Src/params.c, Test/v10private.ztst: nofork substitutions can
+	use private parameters; fix crash bug on {privateFD}>&N; add
+	tests and documentation
+
 2024-01-28  Bart Schaefer  <schaefer@zsh.org>
 
 	* 52510: Doc/Zsh/expn.yo, Doc/Zsh/mod_private.yo: document how
